@@ -4,6 +4,7 @@
 
 package frc.robot.subsystems;
 
+import java.io.IOException;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
@@ -38,13 +39,28 @@ public class Vision extends SubsystemBase {
 
   private final PhotonCamera camera = new PhotonCamera("OV5647");
 
-  AprilTagFieldLayout layout = new AprilTagFieldLayout(List.of(new AprilTag(2, new Pose3d(new Translation3d(0, 0, Units.inchesToMeters(26.2)), new Rotation3d(0, 0, Math.toRadians(180))))), 50, 50);
-  private final RobotPoseEstimator poseEstimator = new RobotPoseEstimator(layout, RobotPoseEstimator.PoseStrategy.AVERAGE_BEST_TARGETS, Arrays.asList(new Pair(camera, new Transform3d(new Translation3d(0, 0, Units.inchesToMeters(9)), new Rotation3d(0, Math.toRadians(23), 0)))));
-  
+  private AprilTagFieldLayout layout;
+  // AprilTagFieldLayout layout = new AprilTagFieldLayout(
+  // List.of(new AprilTag(2,
+  // new Pose3d(new Translation3d(0, 0, Units.inchesToMeters(26.2)), new
+  // Rotation3d(0, 0, Math.toRadians(180))))),
+  // 50, 50);
+  private final RobotPoseEstimator poseEstimator = new RobotPoseEstimator(layout,
+      RobotPoseEstimator.PoseStrategy.AVERAGE_BEST_TARGETS,
+      Arrays.asList(new Pair(camera, new Transform3d(new Translation3d(0, 0, Units.inchesToMeters(9)),
+          new Rotation3d(0, Math.toRadians(23), 0)))));
+
   Drivetrain drivetrain;
 
   public Vision(Drivetrain drivetrain) {
     this.drivetrain = drivetrain;
+
+    try {
+      this.layout = AprilTagFields.k2023ChargedUp.loadAprilTagLayoutField();
+      System.out.println("LOADED FIELD WITH " + this.layout.getTags().size() + " TAGS.");
+    } catch (IOException e) {
+      e.printStackTrace();
+    }
   }
 
   @Override
@@ -58,7 +74,10 @@ public class Vision extends SubsystemBase {
 
     var target = camera.getLatestResult().getBestTarget();
 
-    //double currentDistance = PhotonUtils.calculateDistanceToTargetMeters(Units.inchesToMeters(9 + 3.0/8.0), Units.inchesToMeters(27 + 5.0/8.0), Units.degreesToRadians(33), Units.degreesToRadians(target.getPitch()));
+    // double currentDistance =
+    // PhotonUtils.calculateDistanceToTargetMeters(Units.inchesToMeters(9 +
+    // 3.0/8.0), Units.inchesToMeters(27 + 5.0/8.0), Units.degreesToRadians(33),
+    // Units.degreesToRadians(target.getPitch()));
     Pose2d currentRobotPose = getGlobalPositionNew();
 
     SmartDashboard.putNumber("Yaw", target.getYaw());
@@ -71,7 +90,7 @@ public class Vision extends SubsystemBase {
   }
 
   public PhotonTrackedTarget getBestTarget() {
-    
+
     var result = camera.getLatestResult();
     if (result == null)
       return null;
@@ -79,18 +98,22 @@ public class Vision extends SubsystemBase {
     return result.getBestTarget();
   }
 
-  /** Returns the position of the robot on the feild based on the best target. Assumes the robot is level on the ground */
-  public Pose2d getGlobalRobotPosition(){
+  /**
+   * Returns the position of the robot on the feild based on the best target.
+   * Assumes the robot is level on the ground
+   */
+  public Pose2d getGlobalRobotPosition() {
 
     // poseEstimator.setReferencePose(drivetrain.getPose());
     Optional<Pair<Pose3d, Double>> optionalPose = poseEstimator.update();
 
-    if (optionalPose.isEmpty()) return null;
+    if (optionalPose.isEmpty())
+      return null;
 
     Pair<Pose3d, Double> timedPose = optionalPose.get();
 
-    //drivetrain.resetOdometry(timedPose.getFirst().toPose2d());
-    //return drivetrain.getPose();
+    // drivetrain.resetOdometry(timedPose.getFirst().toPose2d());
+    // return drivetrain.getPose();
     return optionalPose.get().getFirst().toPose2d();
   }
 
@@ -101,11 +124,12 @@ public class Vision extends SubsystemBase {
 
     PhotonTrackedTarget target = result.getBestTarget();
     var optionalPose = layout.getTagPose(target.getFiducialId());
-    if (optionalPose.isEmpty()) return null;
+    if (optionalPose.isEmpty())
+      return null;
 
     Pose2d robotPose = optionalPose.get().transformBy(target.getBestCameraToTarget()).toPose2d();
 
-    //return robotPose;
+    // return robotPose;
     return new Pose2d(target.getBestCameraToTarget().getX(), target.getBestCameraToTarget().getY(), new Rotation2d());
   }
 
